dom/canvas/WebGLTypes.h
@@ -98,9 +98,8 @@ MOZ_END_ENUM_CLASS(WebGLImageDataStatus)
 MOZ_BEGIN_ENUM_CLASS(WebGLTexelFormat, int)
     // returned by SurfaceFromElementResultToImageSurface to indicate absence of image data
     None,
-    // dummy error code returned by GetWebGLTexelFormat in error cases,
-    // after assertion failure (so this never happens in debug builds)
-    BadFormat,
+    // common value for formats for which format conversions are not supported
+    FormatNotSupportingAnyConversion,
     // dummy pseudo-format meaning "use the other format".
     // For example, if SrcFormat=Auto and DstFormat=RGB8, then the source
     // is implicitly treated as being RGB8 itself.
@@ -108,8 +107,6 @@ MOZ_BEGIN_ENUM_CLASS(WebGLTexelFormat, int)
     // 1-channel formats
     R8,
     A8,
-    D16, // WEBGL_depth_texture
-    D32, // WEBGL_depth_texture
     R16F, // OES_texture_half_float
     A16F, // OES_texture_half_float
     R32F, // OES_texture_float
@@ -118,7 +115,6 @@ MOZ_BEGIN_ENUM_CLASS(WebGLTexelFormat, int)
     RA8,
     RA16F, // OES_texture_half_float
     RA32F, // OES_texture_float
-    D24S8, // WEBGL_depth_texture
     // 3-channel formats
     RGB8,
     BGRX8, // used for DOM elements. Source format only.
